--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Garima's Portfolio</title>
+    <title>Gareema's Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -302,7 +302,7 @@
 <body>
     <header class="navbar">
         <nav>
-            <div class="left">Garima's Portfolio</div>
+            <div class="left">Gareema's Portfolio</div>
             <div class="right">
                 <ul>
 
@@ -321,12 +321,12 @@
 
         <section class="firstsection" id="firstsection">
             <div class="leftsection">
-                Hi, My name is <span class="purple">Garima</span>
+                Hi, My name is <span class="purple">Gareema</span>
                 <div>I am a Passionate</div>
 
                 <span id="element"></span>
                 <div class="buttons">
-                    <button class="btn" onclick="window.open('Garimasresume.pdf','_blank')"> View Resume</button>
+                    <button class="btn" onclick="window.open('Gareemasresume.pdf','_blank')"> View Resume</button>
                     <a href="https://github.com/Gfitzone"><button class="btn">Visit Github</button></a>
                 </div>
             </div>
@@ -416,7 +416,7 @@
         <div class="footer">
             <div class="footerfirst">
                 <h3>
-                    Made by Garima Thapa
+                    Made by Gareema Thapa
                 </h3>
             </div>
             <div class="footericons">
@@ -431,7 +431,7 @@
 
             </div>
             <p class="rightreserved">
-                &copy; www.garimathapa.com.np | All right reserved @2024
+                &copy; www.gareemathapa.com.np | All right reserved @2024
             </p>
         </div>
 
@@ -446,5 +446,6 @@
         });
     </script>
 </body>
+
 
 </html>
