--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         }
 
         body {
-            background-color: rgb(218, 180, 218);
-            color: rgb(18, 1, 1);
+            background: radial-gradient(circle, lightblue, lightgreen, purple);
+
+        color: rgb(18, 1, 1);
             font-family: 'Rum Raisin';
             padding-top: 50px;
 
@@ -449,3 +450,4 @@
 
 
 </html>
+
