Fix HTML structure and styles for portfolio page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             justify-content: space-around;
             align-items: center;
             height: 90px;
-            background-color: rgb(120, 87, 105);
+            background: radial-gradient(circle, lightblue, lightgreen, purple);
+
         }
 
         nav ul {
@@ -185,7 +186,8 @@
 
         footer {
 
-            background-color: #d185ad;
+            background: radial-gradient(circle, lightblue, lightgreen, purple);
+
             padding-bottom: 30px;
 
             height: 10px;
@@ -450,4 +452,5 @@
 
 
 </html>
+
 
